<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1266dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="308dp"
                android:layout_height="62dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="52dp"
                android:layout_marginBottom="20dp"
                android:hint="@string/inscriptionTitle"
                android:textAlignment="center"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/prenomInput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/prenomInput"
                android:layout_width="135dp"
                android:layout_height="43dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:ems="10"
                android:hint="@string/prenomLabel"
                android:inputType="text"
                app:layout_constraintEnd_toStartOf="@+id/nomInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <EditText
                android:id="@+id/nomInput"
                android:layout_width="135dp"
                android:layout_height="43dp"
                android:layout_marginStart="36dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="52dp"
                android:ems="10"
                android:hint="@string/nomLabel"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/prenomInput"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <EditText
                android:id="@+id/professionInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="52dp"
                android:ems="10"
                android:hint="@string/professionLabel"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prenomInput" />

            <EditText
                android:id="@+id/motPassInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="52dp"
                android:ems="10"
                android:hint="@string/motPassLabel"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/courrielAccountInput" />

            <EditText
                android:id="@+id/motPassInput2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="52dp"
                android:ems="10"
                android:hint="@string/motPassLabel2"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/motPassInput" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="242dp"
                android:layout_height="38dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="85dp"
                android:text="@string/dateNaissance"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/motPassInput2" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:spinnersShown="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="242dp"
                android:layout_height="38dp"
                android:layout_marginStart="85dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="85dp"
                android:hint="@string/addresseLabel"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/datePicker" />

            <EditText
                android:id="@+id/numeroCivilInput"
                android:layout_width="125dp"
                android:layout_height="39dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="63dp"
                android:ems="10"
                android:hint="@string/numeroLabel"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/rueInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/rueInput"
                android:layout_width="122dp"
                android:layout_height="37dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="52dp"
                android:ems="10"
                android:hint="@string/rueLabel"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numeroCivilInput"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/codePostalInput"
                android:layout_width="188dp"
                android:layout_height="38dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="110dp"
                android:ems="10"
                android:hint="@string/postalLabel"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numeroCivilInput" />

            <EditText
                android:id="@+id/paysInput"
                android:layout_width="188dp"
                android:layout_height="38dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="110dp"
                android:ems="10"
                android:hint="@string/paysLabel"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/provinceInput" />

            <EditText
                android:id="@+id/provinceInput"
                android:layout_width="188dp"
                android:layout_height="38dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="110dp"
                android:ems="10"
                android:hint="@string/provinceLabel"
                android:inputType="text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/codePostalInput" />

            <Button
                android:id="@+id/btnRetour"
                android:layout_width="106dp"
                android:layout_height="47dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="102dp"
                android:hint="@string/retourLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnSoumettre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paysInput" />

            <Button
                android:id="@+id/btnSoumettre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="51dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="101dp"
                android:text="@string/soumettreLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnRetour"
                app:layout_constraintTop_toBottomOf="@+id/paysInput" />

            <EditText
                android:id="@+id/courrielAccountInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="52dp"
                android:ems="10"
                android:hint="Courriel"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/professionInput" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>