<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    >

    <ImageView
        android:id="@+id/iconAdminAV"
        android:layout_width="48dp"
        android:layout_height="65dp"
        android:layout_marginEnd="16dp"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/courrielNameAV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder1"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/prenomAV"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nomAV"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder2"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/professionAV"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/placeholder3"
                android:textSize="14sp" />

        </TableRow>


    </TableLayout>


</LinearLayout>



