<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/connexionBTN"
            android:layout_width="145dp"
            android:layout_height="51dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="211dp"
            android:layout_marginBottom="191dp"
            android:text="@string/textConfirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputMotPass" />

        <EditText
            android:id="@+id/inputMotPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/inscrireLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPass" />

        <EditText
            android:id="@+id/inputCourriel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="28dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/labelPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courrielLabel" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="97dp"
            android:text="@string/appTitle"
            android:textAlignment="center"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/courrielLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/courrielLabel"
            android:layout_width="93dp"
            android:layout_height="27dp"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="263dp"
            android:text="@string/textCourriel"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/inputCourriel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelPass" />

        <TextView
            android:id="@+id/labelPass"
            android:layout_width="132dp"
            android:layout_height="28dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="224dp"
            android:text="@string/textPass"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputCourriel" />

        <TextView
            android:id="@+id/inscrireLabel"
            android:layout_width="93dp"
            android:layout_height="23dp"
            android:layout_marginStart="264dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="241dp"
            android:text="@string/inscrireBTN"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputMotPass" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>